# hh_slackbot

./: README.md  pyproject.toml
hh_slackbot/: main.py
